--------------------------------------------------------------------------------
Changes for 1.9.9

New features:
A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)

Bug fixes:
A......... [ZBX-4403] fixed low level discovery rule creation (pavels)
..F.I...S. [ZBX-3832] removed support of aggregated graph items (pavels, Sasha)
..F....... [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
A.F....... [ZBX-4382] fixed missing dates in the midle of graph axis (sanja)
A.F....... [ZBX-3366] fixed API sorting (Eduard)

--------------------------------------------------------------------------------
Changes for 1.9.8

New features:
 - [ZBX-3104] implemented the screen item API (pavels)
 - [ZBXNEXT-913] redesign Configuration->IT Services (Eduard)
 - [ZBXNEXT-907] redesign Configuration->Applications (Eduard)
 - [ZBX-3271] implemented the _x() and _xn() function for context dependent translations (pavels, Richlv, Vedmak)
 - [ZBX-3498] removed items from unmonitored hosts from the 'Add graph' and 'Add simple graph' pop-ups in the 'Favourite graphs' widget (pavels)
 - [ZBX-3498] removed the 'Status' column from the 'Add simple graph' pop-up (pavels)
 - [ZBXNEXT-1019] updated jQuery to 1.7 (Vedmak)
 - [ZBX-1357] added initial Greek translation (Richlv)
 - [ZBXNEXT-911] redesign Configuration->Web (Eduard)
 - [ZBXNEXT-579] added support for vfs.fs.discovery (with both {#FSNAME} and {#FSTYPE}) on FreeBSD, NetBSD and OpenBSD (asaveljevs)
 - [ZBXNEXT-580] added support for {#FSTYPE} for vfs.fs.discovery on AIX, HP-UX, Linux, Solaris and Windows (asaveljevs)
 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)